Creacion de la segunda version de mi portafolio web

--- a/index.html
+++ b/index.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProyectoEmtech</title>
-</head>
-<body>
-    <h1>Inicio de pagina</h1>
-</body>
+<html>
+   <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Pagina Emtech</title>
+   </head>
+   <body>
+      <header>
+         <audio src="8-bit-game-124502.mp3" autoplay></audio>
+         <nav>
+            <ul>
+				<li><a href="Index.html">INICIO</a></li>
+				<li><a href="proyectos.html">PROYECTOS</a></li>
+				<li><a href="acerca de mi.html">ACERCA DE MI</a></li>
+				<li><a href="contacto.html">CONTACTO</a></li>
+            </ul>
+         </nav>
+      </header>
+      <aside>
+         <img src="robot-2192617_1280.png" alt="logo">
+      </aside>
+      <section>
+         <h2>TECNOLOGIAS</h2>
+         <img src="pngwing.com.png" alt="">
+         <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JAVA SCRIPT</li>
+            <li>PYTHON</li>
+            <li>SOLIDITY</li>
+         </ul>
+      </section>
+      <section>
+         <h2>MI MEJOR PROYECTO</h2>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil facere pariatur iste debitis doloremque, molestias voluptates sequi. Aliquam est neque repellat iste illum recusandae fuga. Nesciunt molestias ut iusto a.</p>
+      </section>
+      <section>
+         <h2>PROYECTOS QUE HE REALIZADO PROFECIONALMENTE</h2>
+         <ol>
+            <li>Votacion via remota Nuevo Leon</li>
+            <li>Plataforma de mensajes de difucion para la Universidad Tecnologica de Huejotzingo</li>
+         </ol>
+      </section>
+      <section>
+         <h2>TESTIMONIOS DE CLIENTES</h2>
+         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, delectus. Enim consequatur sed, quia delectus repellat alias nemo, rem natus ipsam rerum nihil, quas perferendis veritatis inventore nulla laborum unde.</p>
+      </section>
+      <footer>
+         <p>IRVING ALEJANDRO HERNANDEZ RAMIREZ</p>
+      </footer>
+   </body>
 </html>
