Agregado de estilos CSS a mi codigo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="./estilos.css">
       <title>Pagina Emtech</title>
    </head>
    <body>
@@ -18,12 +19,12 @@
             </ul>
          </nav>
       </header>
-      <aside>
-         <img src="robot-2192617_1280.png" alt="logo">
-      </aside>
+      <section>
+         <img class="logo" src="./robot-2192617_1280.png" alt="logo">
+      </section>
       <section>
          <h2>TECNOLOGIAS</h2>
-         <img src="pngwing.com.png" alt="">
+         <img class="tecnologias" src="pngwing.com.png" alt="">
          <ul>
             <li>HTML</li>
             <li>CSS</li>
