--- a/acerca de mi.html
+++ b/acerca de mi.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="./estilos.css">
       <title>Pagina Emtech</title>
    </head>
    <body>
@@ -19,7 +20,7 @@
          </nav>
       </header>
       <aside>
-         <img src="robot-2192617_1280.png" alt="logo">
+         <img class="logo" src="./robot-2192617_1280.png" alt="logo">
       </aside>
       <section>
          <h2>ACERCA DE MI</h2>
