--- a/contacto.html
+++ b/contacto.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="./estilos.css">
       <title>Pagina Emtech</title>
    </head>
    <body>
@@ -19,7 +20,7 @@
          </nav>
       </header>
       <aside>
-         <img src="robot-2192617_1280.png" alt="logo">
+         <img class="logo" src="./robot-2192617_1280.png" alt="logo">
       </aside>
       <aside>
          <h2>SERVICIOS</h2>
@@ -41,7 +42,7 @@
       </section>
       <section>
          <video src="https://youtu.be/BrMip6-M_tk" controls></video>
-         <img src="https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/media/image/2020/04/programacion-1917283.jpg" alt="imagen de internet">
+         <img id="imagenesInternet" src="https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/media/image/2020/04/programacion-1917283.jpg" alt="imagen de internet">
       </section>
       <div></div>
       <h1>CONTACTO</h1>
