--- a/formacion.html
+++ b/formacion.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,34 +29,29 @@
 			</ul>
 		</nav>
 	</header>
-	<section class="AcercaDeMi">
-		<h2>ACERCA DE MI</h2>
-		<img src="fotoejemplo.png" alt="fotoDePerfil" class="fotoPerfil">
-		<div class="derecha">
-			<p>Irving Alejandro Hernandez Ramirez.</p>
-			<p>TSU Infraestructura de redes digitales.</p>
-			<p>24 Anios.</p>
-			<p>Mexicano</p>
-			<p>Programador FrontEnd en proceso</p>
-		</div>
+	<section class="TitulosCertificaciones">
+		<h2>Sobre mis titulos y certificaciones</h2>
+		<img class="imagenUni" src="logo_uth_1.png" alt="logo de UTH">
 	</section>
-	<table>
-		<tr>
-			<td>Edad</td>
-			<td>Origen</td>
-			<td>Areas de desarrollo</td>
-			<td>Preparacion Universitaria</td>
-		</tr>
-		<tr>
-			<td>24</td>
-			<td>Mexico</td>
-			<td>Proyecto Emtech</td>
-			<td>TSU</td>
-		</tr>
-	</table>
-	</section>
-	<footer>
-		<p>IRVING ALEJANDRO HERNANDEZ RAMIREZ</p>
-	</footer>
+	<section>
+		<form action="">
+			<div>Programacion en Python</div>
+			<input type="radio">
+			<div>Programacion en JS</div>
+			<input type="radio">
+			<div>Programacion en Solidity</div>
+			<input type="radio">
+		</form>
+		<section>
+			<form action="">
+				<div>Programacion en HTML</div>
+				<input type="checkbox">
+				<div>Programacion en CSS</div>
+				<input type="checkbox">
+			</form>
+		</section>
+		<footer>
+			<p>IRVING ALEJANDRO HERNANDEZ RAMIREZ</p>
+		</footer>
 </body>
 </html>
