--- a/contacto.html
+++ b/contacto.html
@@ -1,78 +1,82 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="./estilos.css">
-      <title>Pagina Emtech</title>
-   </head>
-   <body>
-      <header>
-         <audio src="8-bit-game-124502.mp3" autoplay></audio>
-         <nav>
-            <ul>
-               <li><a href="Index.html">INICIO</a></li>
-               <li><a href="proyectos.html">PROYECTOS</a></li>
-               <li><a href="acerca de mi.html">ACERCA DE MI</a></li>
-               <li><a href="contacto.html">CONTACTO</a></li>
-            </ul>
-         </nav>
-      </header>
-      <aside>
-         <img class="logo" src="./robot-2192617_1280.png" alt="logo">
-      </aside>
-      <aside>
-         <h2>SERVICIOS</h2>
-         <h3>Selecciona el servicio que requieres</h3>
-         <form action="">
-            <select name="" id="">
-               <option value="Programacion en HTML">Trabajo en HTML</option>
-               <option value="Programacion en CSS">Trabajo en CSS</option>
-               <option value="Programacion en JS">Programacion en JS</option>
-               <option value="Programacion en Python">Programacion en Python</option>
-               <option value="Programacion en Solidity">Programacion en Solidity</option>
-            </select>
-         </form>
-      </aside>
-      <section>
-      <h2>UBICACION</h2>
-      <section>
-         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15408295.983963955!2d-116.06229230000004!3d19.464575300000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1f89d203153df%3A0x9317b747c0e69dc3!2sEmTech%20Digital!5e0!3m2!1ses!2smx!4v1669436824076!5m2!1ses!2smx" width="1600" height="850" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </section>
-      <section>
-         <video src="https://youtu.be/BrMip6-M_tk" controls></video>
-         <img id="imagenesInternet" src="https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/media/image/2020/04/programacion-1917283.jpg" alt="imagen de internet">
-      </section>
-      <div></div>
-      <h1>CONTACTO</h1>
-      <form>
-         <div>
-            <label>Nombre completo:</label>
-            <input placeholder="Inserta nombre completo"/>
-         </div>
-         <div>
-            <label>Correo:</label>
-            <input placeholder="Inserta correo"/>
-         </div>
-         <div>
-            <label>Telefono:</label>
-            <input placeholder="Inserta telefono"/>
-         </div>
-         <div>
-            <label>Direccion:</label>
-            <input placeholder="Inserta tu direccion"/>
-         </div>
-         <div>
-            <textarea name="" id="" cols="30" rows="10"></textarea>
-         </div>
-         <div>
-            <input type="submit" value="Enviar" />
-            <input type="reset" value="Limpiar" />
-         </div>
-      </form>
-      <footer>
-         <p>IRVING ALEJANDRO HERNANDEZ RAMIREZ</p>
-      </footer>
-   </body>
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./estilos.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+	<title>Pagina Emtech</title>
+</head>
+<body>
+	<div class="FondoPrincipal">
+		<h1 class="Frase">Desarrollador en proceso</h1>
+	</div>
+	<header>
+		<a href="index.html" class="LogoYTitulo">
+			<img class="logoPortafolio" src="./robot-2192617_1280.png" alt="logo">
+			<h2 class="Titulo">Portafolio Electronico</h2>
+		</a>
+		<nav>
+			<ul>
+				<a href="Index.html">INICIO</a>
+				<a href="formacion.html">FORMACION</a>
+				<a href="acerca de mi.html">ACERCA DE MI</a>
+				<a href="contacto.html">CONTACTO</a>
+				<input class="Buscar" type="text" placeholder="Encuentra..." required>
+				<i class="bi bi-cart carrito"></i>
+			</ul>
+		</nav>
+	</header>
+	<section>
+		<h2 class="tServicio">SERVICIOS</h2>
+		<h3 class="ServicioReq">Selecciona el servicio que requieres</h3>
+		<form action="">
+			<select name="" id="">
+            <option value="Programacion en HTML">Trabajo en HTML</option>
+            <option value="Programacion en CSS">Trabajo en CSS</option>
+            <option value="Programacion en JS">Programacion en JS</option>
+            <option value="Programacion en Python">Programacion en Python</option>
+            <option value="Programacion en Solidity">Programacion en Solidity</option>
+         </select>
+		</form>
+	</section>
+	<section>
+		<h2 class="tUbicacion">UBICACION</h2>
+		<section>
+			<iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15408295.983963955!2d-116.06229230000004!3d19.464575300000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1f89d203153df%3A0x9317b747c0e69dc3!2sEmTech%20Digital!5e0!3m2!1ses!2smx!4v1669436824076!5m2!1ses!2smx" width="1600" height="850" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+		</section>
+		<section>
+			<video class="videoContacto" src="https://youtu.be/BrMip6-M_tk" controls></video>
+			<img class="imagenContacto" id="imagenesInternet" src="https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/media/image/2020/04/programacion-1917283.jpg" alt="imagen de internet">
+		</section>
+		<div></div>
+		<h1 class="tContacto">CONTACTO</h1>
+		<form>
+			<div>
+				<input placeholder="Inserta nombre completo" />
+			</div>
+			<div>
+				<input placeholder="Inserta correo" />
+			</div>
+			<div>
+				<input placeholder="Inserta telefono" />
+			</div>
+			<div>
+				<input placeholder="Inserta tu direccion" />
+			</div>
+			<div>
+				<p>Envia un mensaje</p>
+				<textarea name="" id="" cols="30" rows="10"></textarea>
+			</div>
+			<div>
+				<input clas="botones" type="submit" value="Enviar" />
+				<input clas="botones" type="reset" value="Limpiar" />
+			</div>
+		</form>
+		<footer>
+			<p>IRVING ALEJANDRO HERNANDEZ RAMIREZ</p>
+		</footer>
+</body>
 </html>
