--- a/index.html
+++ b/index.html
@@ -1,55 +1,82 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="./estilos.css">
-      <title>Pagina Emtech</title>
-   </head>
-   <body>
-      <header>
-         <audio src="8-bit-game-124502.mp3" autoplay></audio>
-         <nav>
-            <ul>
-				<li><a href="Index.html">INICIO</a></li>
-				<li><a href="proyectos.html">PROYECTOS</a></li>
-				<li><a href="acerca de mi.html">ACERCA DE MI</a></li>
-				<li><a href="contacto.html">CONTACTO</a></li>
-            </ul>
-         </nav>
-      </header>
-      <section>
-         <img class="logo" src="./robot-2192617_1280.png" alt="logo">
-      </section>
-      <section>
-         <h2>TECNOLOGIAS</h2>
-         <img class="tecnologias" src="pngwing.com.png" alt="">
-         <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JAVA SCRIPT</li>
-            <li>PYTHON</li>
-            <li>SOLIDITY</li>
-         </ul>
-      </section>
-      <section>
-         <h2>MI MEJOR PROYECTO</h2>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil facere pariatur iste debitis doloremque, molestias voluptates sequi. Aliquam est neque repellat iste illum recusandae fuga. Nesciunt molestias ut iusto a.</p>
-      </section>
-      <section>
-         <h2>PROYECTOS QUE HE REALIZADO PROFECIONALMENTE</h2>
-         <ol>
-            <li>Votacion via remota Nuevo Leon</li>
-            <li>Plataforma de mensajes de difucion para la Universidad Tecnologica de Huejotzingo</li>
-         </ol>
-      </section>
-      <section>
-         <h2>TESTIMONIOS DE CLIENTES</h2>
-         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, delectus. Enim consequatur sed, quia delectus repellat alias nemo, rem natus ipsam rerum nihil, quas perferendis veritatis inventore nulla laborum unde.</p>
-      </section>
-      <footer>
-         <p>IRVING ALEJANDRO HERNANDEZ RAMIREZ</p>
-      </footer>
-   </body>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./estilos.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+	<title>Pagina Emtech</title>
+</head>
+<body>
+	<div class="FondoPrincipal">
+		<h1 class="Frase">Desarrollador en proceso</h1>
+	</div>
+	<header>
+		<a href="index.html" class="LogoYTitulo">
+			<img class="logoPortafolio" src="./robot-2192617_1280.png" alt="logo">
+			<h2 class="Titulo">Portafolio Electronico</h2>
+		</a>
+		<nav>
+			<ul>
+				<a href="Index.html">INICIO</a>
+				<a href="formacion.html">FORMACION</a>
+				<a href="acerca de mi.html">ACERCA DE MI</a>
+				<a href="contacto.html">CONTACTO</a>
+				<input class="Buscar" type="text" placeholder="Encuentra..." required>
+				<i class="bi bi-cart carrito"></i>
+			</ul>
+		</nav>
+	</header>
+	<section class="tecnologias">
+		<h2>Galeria de tecnologias</h2>
+		<div class="gridTecnologias">
+			<div><img class="imgHtml" src="./HTML5.png" alt="HTML" class="GridImagenes"></div>
+			<div><img class="imgCss" src="./CSS.png" alt="CSS" class="GridImagenes"></div>
+			<div><img class="imgJs" src="./JS.png" alt="JS" class="GridImagenes"></div>
+			<div><img class="imgPython" src="./Python.png" alt="Python" class="GridImagenes"></div>
+		</div>
+	</section>
+	<section class="MisProyectos">
+		<h2>Mis proyectos</h2>
+		<a href="">Proyectos en desarrollo.</a>
+		<p>
+			Proyectos en los que me e desempeniado durante mi etapa universitaria, En esta etapa desarrolle trabajos en el area de desarrollo web para mis clases de aplicaciones web, donde me dieron una introduccion a lo que es el diesnio y maquetado HTML y CSS.
+		</p>
+		<a href="">Proyectos en Redes.</a>
+		<p>
+			En este apartado hago demostracion de capturas de mis actividades haciendo simulaciones de conecciones en Cisco Packet Tracer, donde logre aprender a configurar routers y switches de Cisco entre otras metodologias de aprendisaje en que logre conseguir certificaciones de Cisco.
+		</p>
+		<a href="">Proyectos en Bases de datos.</a>
+		<p>
+			En este apartado demuestro mediante capturas todo el aprendisaje que logre adquirir y en el que quiero lograr avanzar para mis futuras actividades.
+		</p>
+		<a href="">Proyectos en Python.</a>
+		<p>
+			Demuestro todas las actividades mediante un enlace a mi cuenta de GitHub para que puedas ver, analizar y descargar mis primeros proyectos en Python.
+		</p>
+	</section>
+	<section class="ProyectosRealizados">
+		<h2>Proyectos que he realizado</h2>
+		<ol>
+			<li>Votacion via remota Nuevo Leon</li>
+			<li>Plataforma de mensajes de difucion para la Universidad Tecnologica de Huejotzingo</li>
+		</ol>
+	</section>
+	<section class="TestimoniosClientes">
+		<h2>Testimonios de clientes</h2>
+		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, delectus. Enim consequatur sed, quia delectus repellat alias nemo, rem natus ipsam rerum nihil, quas perferendis veritatis inventore nulla laborum unde.</p>
+	</section>
+	<footer>
+		<div class="IconosFootter">
+			<p>Facebook</p>
+			<i class="bi bi-facebook iconoHome"></i>
+			<p>whatsapp</p>
+			<i class="bi bi-whatsapp iconoHome"></i>
+			<p>Instagram</p>
+			<i class="bi bi-instagram iconoHome"></i>
+		</div>
+		<p>Irving Alejandro Hernandez Ramirez</p>
+	</footer>
+</body>
 </html>
